Remove useless class specifically used for states // start to bypass lib class and removing all those static // UPD readme

--- a/templates/style.css
+++ b/templates/style.css
@@ -150,6 +150,7 @@ div.input-group {
     div.input-group {
         display:block;
     }
+    form {display:block;}
 }
 
 main {
@@ -161,7 +162,7 @@ footer {
     width: 100%;
     margin:0;
     padding: 12px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     background-color: black;
     color: rgb(106, 236, 241);
