--- a/templates/style.css
+++ b/templates/style.css
@@ -78,7 +78,7 @@ input[type="color"] {
     width: 20px;
     height: 20px;
     padding: 0 !important;
-    margin: 10px;
+    margin: 5px;
     border: 3px black solid;
     outline:none;
 }
@@ -162,8 +162,12 @@ footer {
     width: 100%;
     margin:0;
     padding: 12px;
-    position: relative;
+    position: absolute;
     bottom: 0;
     background-color: black;
     color: rgb(106, 236, 241);
+}
+
+div[hidden] {
+    display: none;
 }
